# B-Plane

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp  mingw_profile
config/Bodies/: earth.json  sun.json
config/Spacecraft/: MRO.json  burning_spacecraft.json  demo_spacecraft.json  demo_spacecraft_5.json  looping_spacecraft.json
output/: Demo Spacecraft_output.csv  Mars Reconnaissance Orbiter_finer_output.csv  Mars Reconnaissance Orbiter_output.csv
output/planets/: 499.csv
python/: b_plane_plotter.py  clear_output.py  graphics.py  plots.py  ref_traj.csv
src/: Simulator.cpp  Simulator.h
